--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
           if (existingAvgGoldPriceRow) {
               existingAvgGoldPriceRow.remove();
           }
-
+          const goldvalue = ((ounceGold.price * usd.price) / 31.1) / 0.75;
+          const cashAmount = ((gold18.price - goldvalue) / goldvalue) * 100;
+          document.getElementById("cash-amount").innerText = toPersianNumber(cashAmount.toLocaleString());
          document.querySelector("#portfolio-value").insertAdjacentHTML(
            "afterend",
            `<div class="text-base font-bold text-purple-800 mt-3 persian-numbers drop-shadow-lg">
@@ -197,9 +199,7 @@
            </div>`
          );
           
-          const goldvalue = ((ounceGold.price * usd.price) / 31.1) / 0.75;
-          const cashAmount = ((gold18.price - goldvalue) / goldvalue) * 100;
-          document.getElementById("cash-amount").innerText = toPersianNumber(cashAmount.toLocaleString());
+          
           const urls = [
             "https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz&type=1",
             "https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeKyzGgWec9Po3hG9QVoMxMtCI3z5P&type=1",
@@ -217,7 +217,7 @@
                 if (ayar && ayar.pc) {
                     const unitfee = ((ayarUnits * (ayar.pc / 10)) * 0.12) / 100;
                     const result = (ayarUnits * (ayar.pc / 10)) - unitfee;
-                    const combined = totalGoldValue + result + totalIrt + cashAmount;
+                    const combined = totalGoldValue + result + totalIrt ;
                     const color = ayar.pcp > 0 ? 'green' : ayar.pcp < 0 ? 'red' : 'black';
 
                     animateElement("fund-price-box", `<span style="color:${color}">صندوق عیار: ${toPersianNumber(ayar.pc.toLocaleString())} (${toPersianNumber(Math.abs(ayar.pcc).toLocaleString())} | ${toPersianNumber(Math.abs(ayar.pcp.toFixed(2)))}%)</span>`);
