--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       </div>
     </section>
 
+    <section id="gold-bubble" class="bg-blue-800 rounded-xl shadow-2xl p-2 text-center text-white persian-numbers">
+          درصد حباب طلای ۱۸ عیار: <span id="goldbubble"></span>
+    </section>
+    
     <section class="bg-white rounded-xl shadow-2xl p-3 text-center persian-numbers">
       <h3 id="portfolio-title" class="text-2xl font-extrabold text-purple-800 mb-2 drop-shadow-lg">طلای آبشده</h3>
       <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-black mt-3 drop-shadow-lg">...</p>
@@ -50,10 +54,6 @@
 
     <section id="crypto-box" class="bg-white rounded-xl shadow-2xl p-3 text-center text-black persian-numbers">
       در حال دریافت اطلاعات رمزارزها...
-    </section>
-
-    <section id="gold-bubble" class="bg-blue-800 rounded-xl shadow-2xl p-2 text-center text-white persian-numbers">
-          نقدی: <span id="goldbubble"></span>
     </section>
 
     <section class="bg-purple-800 rounded-xl shadow-2xl p-3 text-center">
