--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <section id="gold-bubble" class="rounded-xl shadow-2xl p-2 text-center text-white persian-numbers">
-          درصد حباب طلای ۱۸ عیار: <span id="goldbubble"></span>
+          حباب طلای ۱۸ عیار: <span id="goldbubble"></span>
     </section>
 
     <section class="bg-white rounded-xl shadow-2xl p-3 text-center persian-numbers">
