--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
         const ounceGold = data.gold.find(i => i.symbol === "XAUUSD");
         const gvalue = ((ounceGold.price * usd.price) / 31.1) * 0.75;
         const gbubble = ((gold18.price - gvalue) / gvalue) * 100;
+        const goldbubbleElement = document.getElementById("goldbubble");
         const formattedGbubble = (gbubble < 0 ? "−" : "") + toPersianNumber(Math.abs(gbubble).toFixed(2)) + "٪";
-
+        goldbubbleElement.innerText = formattedGbubble;
         // تغییر رنگ باکس بر اساس مقدار حباب
         const goldBubbleBox = document.getElementById("gold-bubble");
         goldBubbleBox.classList.remove("bg-green-800", "bg-blue-800", "bg-red-800");
