--- a/index.html
+++ b/index.html
@@ -192,30 +192,85 @@
           const totalGoldValue = myGoldGrams * commision;
           const Goldpr = avgGoldPrice ? ((goldPrice - avgGoldPrice) / avgGoldPrice) * 100 : 0;
           
-          // محاسبه تعداد روزهای سرمایه‌گذاری از 1404/09/04
-          function getInvestmentDays() {
-             // تاریخ شروع سرمایه‌گذاری (شمسی)
-             const startDateShamsi = "1404/09/04";
+          // تبدیل تاریخ جلالی (شمسی) به تاریخ میلادی (Date object)
+// ورودی: سال، ماه، روز شمسی (اعداد صحیح)
+// خروجی: شیء Date میلادی
+function jalaliToGregorian(jy, jm, jd) {
+  jy = parseInt(jy, 10);
+  jm = parseInt(jm, 10);
+  jd = parseInt(jd, 10);
 
-             // تبدیل تاریخ شمسی به میلادی
-             const gDate = new Date(new Intl.DateTimeFormat("en-u-ca-persian").format(new Date(startDateShamsi)));
+  var jy2 = jy - 979;
+  var jm2 = jm - 1;
+  var jd2 = jd - 1;
 
-            // تاریخ امروز میلادی
-            const today = new Date();
+  var j_day_no = 365 * jy2 + Math.floor(jy2 / 33) * 8 + Math.floor(((jy2 % 33) + 3) / 4);
+  var j_month_days = [31,31,31,31,31,31,30,30,30,30,30,29];
+  for (var i = 0; i < jm2; ++i) {
+    j_day_no += j_month_days[i];
+  }
+  j_day_no += jd2;
 
-            // اختلاف بر حسب روز
-           const diffTime = today - gDate;
-           const diffDays = Math.floor(diffTime / (1000 * 60 * 60 * 24));
+  var g_day_no = j_day_no + 79;
+  var gy = 1600 + 400 * Math.floor(g_day_no / 146097);
+  g_day_no = g_day_no % 146097;
 
-           return diffDays;
-        }
+  var leap = true;
+  if (g_day_no >= 36525) {
+    g_day_no--;
+    gy += 100 * Math.floor(g_day_no / 36524);
+    g_day_no = g_day_no % 36524;
+    if (g_day_no >= 365) {
+      g_day_no++;
+    } else {
+      leap = false;
+    }
+  }
 
-        // مقدار روزها
-       const investmentDays = getInvestmentDays();
+  gy += 4 * Math.floor(g_day_no / 1461);
+  g_day_no = g_day_no % 1461;
 
-        // نمایش در عنوان صفحه
-       document.getElementById("portfolio-title").innerText =
-           `بازدهی سرمایه‌گذاری – ${toPersianNumber(investmentDays)} روز`;
+  if (g_day_no >= 366) {
+    leap = false;
+    g_day_no -= 366;
+    gy += Math.floor(g_day_no / 365);
+    g_day_no = g_day_no % 365;
+  }
+
+  var gregorianMonthDays = [0,31,(leap?29:28),31,30,31,30,31,31,30,31,30,31];
+  var gm = 0, gd = 0;
+  for (var m = 1; m <= 12; m++) {
+    var v = gregorianMonthDays[m];
+    if (g_day_no < v) {
+      gm = m;
+      gd = g_day_no + 1;
+      break;
+    }
+    g_day_no -= v;
+  }
+
+  return new Date(gy, gm - 1, gd);
+}
+
+// ---------- جایگزین کردن متن عنوان با تعداد روزهای سرمایه گذاری ----------
+(function updatePortfolioTitleWithDays() {
+  // تاریخ شروع شمسی مورد نظر: 1404/09/04
+  const startShamsi = { y: 1404, m: 9, d: 4 };
+  const startDate = jalaliToGregorian(startShamsi.y, startShamsi.m, startShamsi.d);
+  const today = new Date();
+
+  // اختلاف به روز (بدون در نظر گرفتن ساعت)
+  const diffMs = today.setHours(0,0,0,0) - startDate.setHours(0,0,0,0);
+  const diffDays = Math.floor(diffMs / (1000 * 60 * 60 * 24));
+
+  // اگر منفی یا NaN شد، مقدار امنِ صفر قرار می‌دهیم
+  const safeDays = (Number.isFinite(diffDays) && diffDays >= 0) ? diffDays : 0;
+
+  // نمایش به فارسی با تابع شما (toPersianNumber)
+  document.getElementById("portfolio-title").innerText =
+    `بازدهی سرمایه‌گذاری – ${toPersianNumber(safeDays)} روز`;
+})();
+
 
           
           animateElement("portfolio-value", `مقدار ریالی سرمایه گذاری: ${toPersianNumber((sarmayeh).toString())}`);
